--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -69,20 +69,23 @@
 
 {% if page.title == "Zeppelin" %}
 <div class="jumbotron">
-  <div class="container">
-    <p style="font-size: 25px; font-weight: 300;">
+  <div class="container" style="height: 213px;">
+    <div class="zeppelin" style="margin-top: -72px;">
+      <div class="zeppelin2"></div>
+    </div>
+    <p style="font-size: 26px;font-weight: 300;margin-top: -248px;position: relative;">
       A web-based notebook that enables interactive data analytics for
       <br/>
       data-driven, interactive and collaborative documents with SQL, Scala and more.
     </p>
-    <div class="border row">
+    <div class="border row" style="margin-top:30px;">
       <div class="col-md-12 col-sm-12 col-xs-12 text-center newBtn">
         <a href="" class="btn btn-primary btn-lg" role="button"
            style="margin: 5px; font-size: 15px; font-weight: 300; font-family: 'Roboto', sans-serif;">
           GET STARTED
         </a>
         <a href="/download.html" class="btn btn-primary btn-lg" role="button"
-           style="margin: 5px; font-size: 15px; font-weight: 300; font-family: 'Roboto', sans-serif;">
+           style="margin: 5px 5px 5px 35px; font-size: 15px; font-weight: 300; font-family: 'Roboto', sans-serif;">
           DOWNLOAD
         </a>
       </div>
