--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -115,6 +115,7 @@ body {
 .navbar-inverse .navbar-nav > li > a:focus {
   color: white !important;
   background: #2C6094 !important;
+  height: 60px;
 }
 
 .navbar-inverse .navbar-collapse.in .navbar-nav .dropdown-menu > li > a:hover,
@@ -149,7 +150,7 @@ body {
 
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: #265380;
+  border-color: #3071A9;
   background: #3071a9;
 }
 
@@ -158,7 +159,8 @@ body {
 }
 
 .navbar-inverse .navbar-toggle {
-  border-color: #265380;
+  border-color: transparent;
+  margin-top: 12px;
 }
 
 .navbar-inverse .navbar-toggle:hover,
@@ -767,7 +769,10 @@ a.anchorjs-link:hover { text-decoration: none; }
   color: #ffffff;
 }
 .newBtn .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-  background: #33a6cc;
+  background: #333;
+  box-shadow: 0 1px 0 0 rgba(0,0,0,0.1);
+  border: 1px solid rgba(0,0,0,0.1);
+  color: #FFFFFF;
   transition: .1s ease-in;
 }
 .newBtn .btn-primary:active, .btn-primary.active {
@@ -1144,12 +1149,12 @@ and (max-width: 1024px) {
 }
 
 /* gh-pages branch docs dropdown menu */
-#docs .dropdown-menu {
+.docs .dropdown-menu {
   left: 0;
   right: auto;
 }
 
-#docs .dropdown-menu li span {
+.docs .dropdown-menu li span {
   padding: 3px 10px 10px 10px;
   font-size: 13px;
 }
@@ -1171,10 +1176,6 @@ and (max-width: 1024px) {
 }
 
 @media (max-width: 768px) {
-  .navbar-collapse.in {
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
-  }
-
   .bigFingerButton {
     margin-top: 12px;
     display: block;
