fix: Move CTRL-N,P to editor shortcut section

--- a/zeppelin-web/src/components/modal-shortcut/modal-shortcut.html
+++ b/zeppelin-web/src/components/modal-shortcut/modal-shortcut.html
@@ -48,28 +48,6 @@ limitations under the License.
             </td>
           </tr>
 
-          <tr>
-            <td>
-              <div class="col-md-8">Move cursor Up</div>
-            </td>
-            <td>
-              <div class="keys">
-                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">P</kbd>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <div class="col-md-8">Move cursor Down</div>
-            </td>
-            <td>
-              <div class="keys">
-                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">N</kbd>
-              </div>
-            </td>
-          </tr>
-
         <tr>
           <td>
             <div class="col-md-8">Remove paragraph</div>
@@ -283,6 +261,29 @@ limitations under the License.
               </div>
             </td>
           </tr>
+
+          <tr>
+            <td>
+              <div class="col-md-8">Move to the previous line</div>
+            </td>
+            <td>
+              <div class="keys">
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">P</kbd>
+              </div>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <div class="col-md-8">Move to next the line</div>
+            </td>
+            <td>
+              <div class="keys">
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">N</kbd>
+              </div>
+            </td>
+          </tr>
+
 
           <tr>
             <td>
