feat: Add missing shortcut desc CTRL-F,B

--- a/zeppelin-web/src/components/modal-shortcut/modal-shortcut.html
+++ b/zeppelin-web/src/components/modal-shortcut/modal-shortcut.html
@@ -306,6 +306,29 @@ limitations under the License.
               </div>
             </td>
           </tr>
+
+          <tr>
+            <td>
+              <div class="col-md-8">Move cursor to the next character</div>
+            </td>
+            <td>
+              <div class="keys">
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">F</kbd>
+              </div>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <div class="col-md-8">Move cursor to the previous character</div>
+            </td>
+            <td>
+              <div class="keys">
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">B</kbd>
+              </div>
+            </td>
+          </tr>
+
         </table>
       </div>
     </div>
