--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -14,11 +14,16 @@ limitations under the License.
 <headroom tolerance="10" offset="30" class="noteAction"
           ng-show="note.id && !paragraphUrl">
   <h3>
-    <div style="float: left; width: auto; max-width: 40%"
-      ng-controller="ElasticInputCtrl as input">
-      <input type="text" pu-elastic-input class="note-title-input" placeholder="New name" style="min-width: 0px; max-width: 95%;"
-           ng-if="input.showEditor" ng-model="input.value" ng-escape="input.showEditor = false" focus-if="input.showEditor"
-           ng-blur="updateNoteName(input.value);input.showEditor = false;" ng-enter="updateNoteName(input.value);input.showEditor = false;" />
+    <div ng-controller="ElasticInputCtrl as input"
+         style="float: left; width: auto; max-width: 40%">
+      <input type="text" pu-elastic-input
+             ng-if="input.showEditor"
+             class="note-title-input" style="min-width: 0px; max-width: 95%;"
+             placeholder="Insert New Note Name"
+             ng-model="input.value"
+             ng-escape="input.showEditor = false" focus-if="input.showEditor"
+             ng-blur="updateNoteName(input.value);input.showEditor = false;"
+             ng-enter="updateNoteName(input.value);input.showEditor = false;" />
       <p class="note-title"
          ng-click="input.showEditor = !revisionView; input.value = note.name"
          ng-show="!input.showEditor">{{noteName(note)}}</p>
