--- a/zeppelin-web/src/components/navbar/navbar.css
+++ b/zeppelin-web/src/components/navbar/navbar.css
@@ -16,8 +16,13 @@
 /* Navbar
 /* ------------------------------------------- */
 
+#navbar-container .navbar-right {
+  margin-right: 5px;
+  margin-top: 1px;
+}
+
 .navbar-brand.navbar-title {
-  margin-top: -3px;
+  margin-top: -4px;
   margin-right: 20px;
 }
 
@@ -29,7 +34,7 @@
 
 .navbar-menu {
   font-weight: 300;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .navbar-inverse .navbar-nav > li > a.navbar-menu-notebook:focus {
@@ -41,7 +46,7 @@
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  padding-top: 16px;
+  padding-top: 15px;
 }
 
 .navbar-logo {
