--- a/zeppelin-web/src/app/jobmanager/jobmanager.html
+++ b/zeppelin-web/src/app/jobmanager/jobmanager.html
@@ -27,9 +27,8 @@ limitations under the License.
       </div>
     </div>
   </div>
-  <div style="margin: 0px">
-    <hr style="margin-top: 10px; margin-bottom: 10px;" />
-  </div>
+
+  <hr style="margin-top: 10px; margin-bottom: 10px;" />
 
   <div class="row">
     <div class="col-md-6 text-left">
@@ -45,10 +44,11 @@ limitations under the License.
         </span>
         <span class="labelBtn btn-group" style="margin-left: 0px; padding-left: 3px;">
           <button type="button" class="btn btn-default btn-xs dropdown-toggle"
-                 data-toggle="dropdown"
-                 style="min-width: 100px; text-align: right !important;">
+                  data-toggle="dropdown"
+                  style="min-width: 100px; text-align: right !important;">
            <span class="text-right job-note-name-font-family">
-             {{filterValueToName(filterConfig.filterValueInterpreter)}}<span class="caret" style="margin-left: 10px"></span>
+             {{filterValueToName(filterConfig.filterValueInterpreter)}}
+             <span class="caret" style="margin-left: 10px"></span>
            </span>
           </button>
           <ul class="dropdown-menu pull-left" role="menu">
@@ -60,73 +60,40 @@ limitations under the License.
            </li>
           </ul>
           <div class="input-group">
-            <input
-             class="job-note-name-query job-note-name-font-family form-control btn-xs"
-             style="margin-left: 5px;"
-             placeholder="Search for Job"
-             type="text" ng-model="filterConfig.filterValueNotebookName"
-             ng-keyup="doFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)"/>
-            <span
-                class="input-group-addon text-right" ng-class="{true : 'btn-primary active', false: ''}[isActiveSearchTimer]"
-                style="height: 5px; padding: 0px 6px 0px 9px !important;"
-                ng-click="doForceFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)">
-              <i class="fa fa-search fa-sm"></i></span>
+            <input class="job-note-name-query job-note-name-font-family form-control btn-xs"
+                   style="margin-left: 5px;"
+                   placeholder="Search for Job"
+                   type="text" ng-model="filterConfig.filterValueNotebookName"
+                   ng-keyup="doFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)"/>
+            <span class="input-group-addon text-right" ng-class="{true : 'btn-primary active', false: ''}[isActiveSearchTimer]"
+                  style="height: 5px; padding: 0px 6px 0px 9px !important;"
+                  ng-click="doForceFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)">
+              <i class="fa fa-search fa-sm"></i>
+            </span>
             </div>
         </span>
       </div>
     </div>
-    <div
-      class="col-md-6 text-right"
-      style="padding-top: 6px;">
-      <span
-        ng-repeat="jobStatus in ['READY', 'FINISHED', 'ABORT', 'ERROR','PENDING','RUNNING']"
-        ng-switch="jobStatus">
-        <span
-          ng-switch-when="FINISHED">
-          <i style="color: green; margin-right: 3px;" class="fa fa-circle"
-             ng-click="">
-          </i>
-          {{jobStatus}}
+    <div class="col-md-6 text-right" style="padding-top: 6px;">
+      <span ng-repeat="jobStatus in ['READY', 'FINISHED', 'ABORT', 'ERROR','PENDING','RUNNING']"
+            ng-switch="jobStatus">
+        <span ng-switch-when="FINISHED">
+          <i style="color: green; margin-right: 3px;" class="fa fa-circle" ng-click=""></i>{{jobStatus}}
         </span>
-        <span
-          ng-switch-when="RUNNING"
-          style="margin-right: 3px;">
-          <i style="color: blue" class="fa fa-spinner"
-             ng-click="">
-          </i>
-          {{jobStatus}}
+        <span ng-switch-when="RUNNING" style="margin-right: 3px;">
+          <i style="color: blue" class="fa fa-spinner" ng-click=""></i>{{jobStatus}}
         </span>
-        <span
-          ng-switch-when="READY"
-          style="margin-right: 3px;">
-          <i style="color: green" class="fa fa-circle-o"
-             ng-click="">
-          </i>
-          {{jobStatus}}
+        <span ng-switch-when="READY" style="margin-right: 3px;">
+          <i style="color: green" class="fa fa-circle-o" ng-click=""></i>{{jobStatus}}
         </span>
-        <span
-          ng-switch-when="PENDING"
-          style="margin-right: 3px;">
-          <i style="color: gray" class="fa fa-circle"
-             ng-click="">
-          </i>
-          {{jobStatus}}
+        <span ng-switch-when="PENDING" style="margin-right: 3px;">
+          <i style="color: gray" class="fa fa-circle" ng-click=""></i>{{jobStatus}}
         </span>
-        <span
-          ng-switch-when="ABORT"
-          style="margin-right: 3px;">
-          <i style="color: orange" class="fa fa-circle"
-             ng-click="">
-          </i>
-          {{jobStatus}}
+        <span ng-switch-when="ABORT" style="margin-right: 3px;">
+          <i style="color: orange" class="fa fa-circle" ng-click=""></i>{{jobStatus}}
         </span>
-        <span
-          ng-switch-when="ERROR"
-          style="margin-right: 3px;">
-          <i style="color: red" class="fa fa-circle"
-             ng-click="">
-          </i>
-          {{jobStatus}}
+        <span ng-switch-when="ERROR" style="margin-right: 3px;">
+          <i style="color: red" class="fa fa-circle" ng-click=""></i>{{jobStatus}}
         </span>
       </span>
     </div>
@@ -134,31 +101,22 @@ limitations under the License.
 </div>
 <div>
   <div class="note-jump"></div>
-  <div
-    ng-if="isLoadingFilter === true"
-    class="paragraph-col">
-    <div
-      class="job-space box job-margin text-center">
-      <i style="color: blue" class="fa fa-spinner spinAnimation">
-      </i>&nbsp;Loading...
+  <div ng-if="isLoadingFilter === true" class="paragraph-col">
+    <div class="job-space box job-margin text-center">
+      <i style="color: blue" class="fa fa-spinner spinAnimation"></i>&nbsp;Loading...
     </div>
   </div>
-  <div
-    ng-if="JobInfomationsByFilter.length > 0"
-    ng-repeat="notebookJob in JobInfomationsByFilter track by $index"
-    class="paragraph-col">
+  <div ng-if="JobInfomationsByFilter.length > 0"
+       ng-repeat="notebookJob in JobInfomationsByFilter track by $index"
+       class="paragraph-col">
     <div ng-include src="'app/jobmanager/jobs/job.html'"
          class="job-space box job-margin"
          ng-controller="JobCtrl">
     </div>
   </div>
-  <div
-    ng-if="isLoadingFilter === false && JobInfomationsByFilter.length <= 0"
-    class="paragraph-col">
-    <div
-      class="job-space box job-margin text-center">
-      No Job found
-    </div>
+  <div ng-if="isLoadingFilter === false && JobInfomationsByFilter.length <= 0"
+       class="paragraph-col">
+    <div class="job-space box job-margin text-center">No Job found</div>
   </div>
   <div style="clear:both;height:10px"></div>
 </div>
