refactor: Remove duplicated switch DOMs

--- a/zeppelin-web/src/app/jobmanager/jobmanager.html
+++ b/zeppelin-web/src/app/jobmanager/jobmanager.html
@@ -76,24 +76,12 @@ limitations under the License.
     </div>
     <div class="col-md-6 text-right" style="padding-top: 6px;">
       <span ng-repeat="jobStatus in ['READY', 'FINISHED', 'ABORT', 'ERROR','PENDING','RUNNING']"
-            ng-switch="jobStatus">
-        <span ng-switch-when="FINISHED">
-          <i style="color: green; margin-right: 3px;" class="fa fa-circle" ng-click=""></i>{{jobStatus}}
-        </span>
-        <span ng-switch-when="RUNNING" style="margin-right: 3px;">
-          <i style="color: blue" class="fa fa-spinner" ng-click=""></i>{{jobStatus}}
-        </span>
-        <span ng-switch-when="READY" style="margin-right: 3px;">
-          <i style="color: green" class="fa fa-circle-o" ng-click=""></i>{{jobStatus}}
-        </span>
-        <span ng-switch-when="PENDING" style="margin-right: 3px;">
-          <i style="color: gray" class="fa fa-circle" ng-click=""></i>{{jobStatus}}
-        </span>
-        <span ng-switch-when="ABORT" style="margin-right: 3px;">
-          <i style="color: orange" class="fa fa-circle" ng-click=""></i>{{jobStatus}}
-        </span>
-        <span ng-switch-when="ERROR" style="margin-right: 3px;">
-          <i style="color: red" class="fa fa-circle" ng-click=""></i>{{jobStatus}}
+            ng-switch="jobStatus"
+            class="job-desc">
+        <span>
+          <i class="job-desc-icon"
+            ng-style="{'color': getJobColorByStatus(jobStatus)}"
+            ng-class="getJobIconByStatus(jobStatus)" ></i>{{jobStatus}}
         </span>
       </span>
     </div>
