--- a/zeppelin-web/src/app/jobmanager/jobmanager.html
+++ b/zeppelin-web/src/app/jobmanager/jobmanager.html
@@ -11,8 +11,8 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<!-- Here the controller <JobmanagerCtrl> is not needed because explicitly set in the app.js (route) -->
-<div class="jobManagerHead" data-ng-init="init()">
+<!-- Here the controller <JobManagerCtrl> is not needed because explicitly set in the app.js (route) -->
+<div class="job-manager-header" data-ng-init="init()">
   <div class="header">
     <div class="row">
       <div class="col-md-12">
@@ -34,44 +34,33 @@ limitations under the License.
     <!-- search tools (input, drop-down, sorting) -->
     <div class="job-search-tool">
       <div class="form-inline">
-        <span class="labelBtn btn-group">
-          <button type="button"
-                  class="btn btn-default"
-                  style="width: 25px; height: 25px; margin-right: 0px; padding: 1px 0px 3px 3px"
-                  ng-click="onChangeSortAsc()"
-                  tooltip-placement="right" uib-tooltip="{{sortTooltipMsg}}">
-            <i class="fa" ng-class="{true: 'fa-sort-amount-asc', false : 'fa-sort-amount-desc'}[filterConfig.isSortByAsc]"></i>
-          </button>
-        </span>
-        <span class="labelBtn btn-group" style="margin-left: 0px; padding-left: 3px;">
-          <button type="button" class="btn btn-default btn-xs dropdown-toggle"
-                  data-toggle="dropdown"
-                  style="min-width: 100px; text-align: right !important;">
-           <span class="text-right job-note-name-font-family">
-             {{filterValueToName(filterConfig.filterValueInterpreter)}}
-             <span class="caret" style="margin-left: 10px"></span>
-           </span>
-          </button>
-          <ul class="dropdown-menu pull-left" role="menu">
+        <span class="btn-group">
+
+          <!-- search tool: input -->
+          <div class="input-group">
+            <input class="form-control btn-xs"
+                   placeholder="Search jobs..."
+                   type="text" ng-model="filterConfig.filterValueNotebookName"
+                   ng-keyup="doFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)" />
+          </div>
+
+          <!-- search tool: dropdown -->
+          <div class="btn btn-default dropdown-toggle"
+               data-toggle="dropdown">
+            <span class="">
+              {{filterValueToName(filterConfig.filterValueInterpreter)}}
+              <span class="caret"></span>
+            </span>
+          </div>
+          <ul class="dropdown-menu" role="menu">
            <li ng-repeat="interpreterOption in activeInterpreters">
-             <a class="job-note-name-font-family" style="cursor:pointer"
-                ng-click="setFilterValue(interpreterOption.value)">
+             <a ng-click="setFilterValue(interpreterOption.value)">
                {{filterValueToName(interpreterOption.value)}}
              </a>
            </li>
           </ul>
-          <div class="input-group">
-            <input class="job-note-name-query job-note-name-font-family form-control btn-xs"
-                   style="margin-left: 5px;"
-                   placeholder="Search for Job"
-                   type="text" ng-model="filterConfig.filterValueNotebookName"
-                   ng-keyup="doFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)"/>
-            <span class="input-group-addon text-right" ng-class="{true : 'btn-primary active', false: ''}[isActiveSearchTimer]"
-                  style="height: 5px; padding: 0px 6px 0px 9px !important;"
-                  ng-click="doForceFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)">
-              <i class="fa fa-search fa-sm"></i>
-            </span>
-            </div>
+          <!-- search tool: dropdown end -->
+
         </span>
       </div>
     </div>
