--- a/zeppelin-web/src/app/jobmanager/jobs/job.html
+++ b/zeppelin-web/src/app/jobmanager/jobs/job.html
@@ -24,7 +24,7 @@ limitations under the License.
     <a style="text-decoration: none !important;" ng-href="#/notebook/{{notebookJob.noteId}}">
       <span>{{notebookJob.noteName}} - </span>
       <span ng-if="notebookJob.interpreter === undefined" style="color: gray;">
-        Interpreter is not set</span>
+        interpreter is not set</span>
       <span ng-if="notebookJob.interpreter !== undefined" style="color: black;">
         {{notebookJob.interpreter}}</span>
     </a>
