--- a/zeppelin-web/src/app/jobmanager/jobmanager.html
+++ b/zeppelin-web/src/app/jobmanager/jobmanager.html
@@ -12,7 +12,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!-- Here the controller <JobManagerCtrl> is not needed because explicitly set in the app.js (route) -->
-<div class="job-manager-header" data-ng-init="init()">
+<div id="job-manager-header" class="job-manager-header" data-ng-init="init()">
   <div class="header">
     <div class="row">
       <div class="col-md-12">
@@ -28,7 +28,7 @@ limitations under the License.
     </div>
   </div>
 
-  <hr style="margin-top: 10px; margin-bottom: 10px;" />
+  <hr style="margin-top: 15px; margin-bottom: 15px;" />
 
   <div class="row">
     <!-- search tools (input, drop-down, sorting) -->
@@ -37,36 +37,40 @@ limitations under the License.
         <span class="btn-group">
 
           <!-- search tool: input -->
-          <div class="input-group">
+          <div class="input-group search-input">
             <input class="form-control btn-xs"
                    placeholder="Search jobs..."
                    type="text" ng-model="filterConfig.filterValueNotebookName"
                    ng-keyup="doFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)" />
           </div>
 
-          <!-- search tool: dropdown -->
+          <!-- search tool: interpreter name dropdown -->
           <div class="btn btn-default dropdown-toggle"
                data-toggle="dropdown">
-            <span class="">
-              {{filterValueToName(filterConfig.filterValueInterpreter)}}
-              <span class="caret"></span>
+            <span>
+              <span class="dropdown-text-desc">Interpreter: </span>
+              <span class="dropdown-text-value">{{filterValueToName(filterConfig.filterValueInterpreter)}}</span>
+              <span class="caret" style="margin-top: 8px; float: right;"></span>
+              <span style="clear: both;"></span>
             </span>
           </div>
-          <ul class="dropdown-menu" role="menu">
+          <ul id="search-tool-interpreter-dropdown-content"
+              class="dropdown-menu dropdown-menu-right" role="menu">
            <li ng-repeat="interpreterOption in activeInterpreters">
-             <a ng-click="setFilterValue(interpreterOption.value)">
+             <a ng-click="setFilterValue(interpreterOption.value)"
+                ng-style="(filterValueToName(interpreterOption.value) === 'ALL' || filterValueToName(interpreterOption.value) === 'NONE') ? { 'font-weight': 500 } : {}"
+                class="dropdown-list-value">
                {{filterValueToName(interpreterOption.value)}}
              </a>
            </li>
           </ul>
-          <!-- search tool: dropdown end -->
 
         </span>
       </div>
     </div>
 
     <!-- job icon descriptions -->
-    <div class="job-icon-desc-container">
+    <div class="job-icon-desc-container hidden-xs hidden-sm">
       <span ng-repeat="jobStatus in ['READY', 'FINISHED', 'ABORT', 'ERROR','PENDING','RUNNING']">
         <span>
           <i class="job-desc-icon"
