--- a/zeppelin-web/src/app/jobmanager/jobmanager.html
+++ b/zeppelin-web/src/app/jobmanager/jobmanager.html
@@ -39,9 +39,11 @@ limitations under the License.
           <!-- search tool: input -->
           <div class="input-group search-input">
             <input class="form-control btn-xs"
-                   placeholder="Search jobs..."
-                   type="text" ng-model="filterConfig.filterValueNotebookName"
-                   ng-keyup="doFilterInputTyping($event, jobInfomations, filterConfig, isLoadingFilter)" />
+                   placeholder="&#xf002 Search jobs..."
+                   type="text"
+                   ng-model="filterConfig.filterValueNotebookName"
+                   ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 300, 'blur': 0 } }"
+                   ng-change="doFiltering(jobInfomations, filterConfig)" />
           </div>
 
           <!-- search tool: interpreter name dropdown -->
@@ -72,7 +74,7 @@ limitations under the License.
     <!-- job icon descriptions -->
     <div class="job-icon-desc-container hidden-xs hidden-sm">
       <span ng-repeat="jobStatus in ['READY', 'FINISHED', 'ABORT', 'ERROR','PENDING','RUNNING']">
-        <span>
+        <span style="margin-right: 2px;">
           <i class="job-desc-icon"
             ng-style="{'color': getJobColorByStatus(jobStatus)}"
             ng-class="getJobIconByStatus(jobStatus)" ></i>{{jobStatus}}
