fix navbar when resizing window

--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -34,7 +34,7 @@
             <li><a href="/docs/0.6.1">0.6.1</a></li>
             <li><a href="documentation.html">Older Versions</a></li>
             <li role="separator" class="divider"></li>
-            <li><span><b>Snapshot</b>&nbsp;(development)<span></li>
+              <li><span><b>Snapshot&nbsp;(development)</b><span></li>
             <li><a href="/docs/0.8.0-SNAPSHOT">0.8.0-SNAPSHOT</a></li>
           </ul>
         </li>
