--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -109,16 +109,16 @@ body {
   font-weight: 300;
   color: white;
   background: #3071a9;
+  height: 60px;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover{
   color: white !important;
   background: #2C6094 !important;
-  height: 60px;
 }
 
-.navbar-inverse .navbar-nav > li > a:focus {
-  height: 60px;
+.navbar-collapse.in {
+  overflow-y: inherit;
 }
 
 .navbar-inverse .navbar-collapse.in .navbar-nav .dropdown-menu > li > a:hover,
@@ -128,11 +128,11 @@ body {
 }
 
 .navbar-inverse .navbar-collapse.in .navbar-nav .dropdown-menu > li > a {
-  color: white !important;
+  color: black !important;
 }
 
 .navbar-inverse .navbar-collapse.in .navbar-nav .divider {
-  background: #286090;
+  background: #e5e5e5;
 }
 
 .navbar-inverse .navbar-nav > li > a.active:hover,
@@ -977,6 +977,7 @@ a.anchorjs-link:hover { text-decoration: none; }
   .jumbotron h1 {
     display: none;
   }
+
   .navbar-brand small {
     display: none;
     color: white;
@@ -1057,9 +1058,33 @@ and (max-width: 768px) {
   .jumbotron .container .zeppelin2 {
     margin-top: -30px;
   }
+
+  .navbar-inverse .navbar-nav > li > a {
+    font-size: 20px;
+  }
+
+  .navbar-nav .open .dropdown-menu {
+    font-size: 16px;
+  }
+
+  .docs .dropdown-menu b {
+    text-shadow: 1px 2px #353131;
+    color: #FFF;
+    font-size: 18px;
+  }
+
+  .navbar-collapse.in {
+    overflow-y: auto;
+  }
+
+  .navbar-inverse .navbar-collapse.in .navbar-nav .dropdown-menu > li > a {
+    color: #FFF !important;
+  }
+  
+  .navbar-inverse .navbar-collapse.in .navbar-nav .divider {
+      background: #286090;
+  }
 }
-
-
 
 @media only screen
 and (min-width: 768px)
@@ -1067,39 +1092,88 @@ and (max-width: 996px) {
   .navbar-brand small {
     display: none;
   }
+
   .navbar-collapse.collapse {
     padding-right: 0;
   }
+
   .navbar-header {
     float: none;
   }
+
   .navbar-toggle {
     display: block;
   }
+
   .navbar-fixed-top {
     top: 0;
     border-width: 0 0 1px;
   }
+
   .navbar-collapse {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
   }
+
   .navbar-collapse.collapse {
     display: none!important;
   }
+
   .navbar-nav {
     float: none!important;
     margin-top: 7.5px;
   }
+
   .navbar-nav>li {
     float: none;
   }
+
   .navbar-nav>li>a {
     padding-top: 10px;
     padding-bottom: 10px;
   }
+
+  .navbar-collapse.in {
+      overflow-y: auto;
+  }
+
+  .navbar-inverse .navbar-collapse.in .navbar-nav .dropdown-menu > li > a {
+    color: #FFF !important;
+  }
+
+  .navbar-inverse .navbar-collapse.in .navbar-nav .divider {
+      background: #286090;
+  }
+
   .collapse.in{
     display:block !important;
+  }
+
+  .navbar-nav .open .dropdown-menu {
+    position: static;
+    float: none;
+    width: 95%;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none;
+    font-size: 16px;
+  }
+
+  .navbar-inverse .navbar-nav > li > a:hover,
+   .navbar-inverse .navbar-nav > li > a:focus {
+    width: 95%;
+  }
+
+  .docs .dropdown-menu b {
+    text-shadow: 1px 2px #353131;
+    color: #FFF;
+    font-size:18px;
+  }
+
+  .navbar-inverse .navbar-nav > li > a {
+    margin-left: -12px;
+    font-size: 20px;
   }
 
   .advertise .panel-content ._hover-text,
@@ -1124,12 +1198,15 @@ and (max-width: 1024px) {
   .navbar-brand small {
     display: none;
   }
+
   .navbar-collapse.collapse {
     padding-right: 0;
   }
+
   .advertise .panel-button {
     font-size: 14px;
   }
+
 }
 
 /* master branch docs dropdown menu */
@@ -1167,8 +1244,6 @@ and (max-width: 1024px) {
 ** Media Queries CSS
 */
 
-
-
 @media (max-width: 991px) {
   .navbar-inverse .navbar-brand {
     font-size: 24px;
@@ -1200,6 +1275,7 @@ and (max-width: 1024px) {
   .carousel-indicators {
     margin-bottom: -60px;
   }
+
   .carousel-caption {
     padding-bottom: 60px;
   }
