connected links and fixed what's new in

--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -14,7 +14,7 @@
     </div>
     <nav class="navbar-collapse collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="">Quick Start</a></li>
+        <li><a href="/docs/0.8.0-SNAPSHOT/install/install.html">Quick Start</a></li>
         <!-- Download -->
         <li class="docs">
           <a href="#" data-toggle="dropdown" class="dropdown-toggle">Download<b class="caret"></b></a>
