--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -748,7 +748,6 @@ a.anchorjs-link:hover { text-decoration: none; }
 }
 
 .new h4 {
-  text-align: center;
   font-size: 20px;
   font-weight: 700;
   padding: 18px;
@@ -1084,6 +1083,10 @@ and (max-width: 768px) {
 
   .navbar-inverse .navbar-collapse.in .navbar-nav .divider {
       background: #286090;
+  }
+
+  .new h4 {
+      padding: 18px 0 0 10px;
   }
 }
 
